commit 5 for spidpay

--- a/app/src/main/res/layout/forgotpasswordlayout.xml
+++ b/app/src/main/res/layout/forgotpasswordlayout.xml
@@ -1,177 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/dialogwith_whiteborder"
     android:paddingTop="@dimen/marign20dp"
+    android:paddingBottom="@dimen/marign20dp">
 
-
-   >
-
-    <LinearLayout
-
-        android:orientation="vertical"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraint_forgot_mobile_number"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/marign20dp"
+        android:layout_marginTop="@dimen/marign20dp"
+        android:layout_marginEnd="@dimen/marign20dp"
+        android:background="@drawable/login_mobilenumber_bg"
+        android:orientation="horizontal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:id="@+id/tv_mobilenumber"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/mobileno"
-            android:textColor="@color/black"></TextView>
-
-        <LinearLayout
-            android:layout_marginLeft="@dimen/marign10dp"
-            android:layout_marginRight="@dimen/marign10dp"
+        <EditText
+            android:id="@+id/edt_login_mobile_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign5dp"
-            android:background="@drawable/dialogwith_blackborder"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/edt_forgotmobilenumber"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/marign35dp"
-                android:layout_weight="1"
-                android:background="@android:color/transparent"
-                android:hint="@string/mobileno"
-                android:inputType="number"
-                android:maxLength="10"
-                android:paddingLeft="@dimen/marign10dp"
-                android:paddingRight="@dimen/marign10dp"
-                android:textColorHint="@color/lightgrey"></EditText>
-
-            <ImageView
-                android:id="@+id/img_clearemail"
-                android:layout_width="@dimen/marign20dp"
-                android:layout_height="@dimen/marign20dp"
-                android:layout_gravity="center"
-                android:layout_marginRight="@dimen/marign10dp"
-                android:layout_weight="0"
-                android:src="@drawable/ic_baseline_cancel_24"
-                android:visibility="gone"></ImageView>
-        </LinearLayout>
-
-
-        <TextView
-            android:layout_marginTop="@dimen/marign10dp"
-            android:id="@+id/tv_otp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/otp"
-            android:paddingLeft="@dimen/marign10dp"
-            android:paddingRight="@dimen/marign10dp"
-            android:textColor="@color/black"></TextView>
-
-        <LinearLayout
-
-            android:layout_marginLeft="@dimen/marign10dp"
-            android:layout_marginRight="@dimen/marign10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign5dp"
-            android:background="@drawable/dialogwith_blackborder"
-            android:orientation="horizontal">
-
-            <EditText
-
-                android:id="@+id/edt_forgototp"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/marign35dp"
-                android:layout_weight="1"
-                android:background="@android:color/transparent"
-                android:hint="@string/otp"
-                android:inputType="number"
-                android:maxLength="6"
-                android:paddingLeft="@dimen/marign10dp"
-                android:paddingRight="@dimen/marign10dp"
-                android:textColorHint="@color/lightgrey"></EditText>
-
-            <ImageView
-                android:id="@+id/img_cclearotp"
-                android:layout_width="@dimen/marign20dp"
-                android:layout_height="@dimen/marign20dp"
-                android:layout_gravity="center"
-                android:layout_marginRight="@dimen/marign10dp"
-                android:layout_weight="0"
-                android:src="@drawable/ic_baseline_cancel_24"
-                android:visibility="gone"></ImageView>
-        </LinearLayout>
-
-        <LinearLayout
             android:background="@android:color/transparent"
-            android:layout_marginTop="@dimen/marign10dp"
-            android:orientation="vertical"
+            android:hint="@string/mobileno"
+            android:inputType="number"
+            android:maxLength="10"
+            android:paddingStart="@dimen/marign5dp"
+            android:paddingTop="@dimen/marign10dp"
+            android:paddingEnd="@dimen/marign10dp"
+            android:paddingBottom="@dimen/marign10dp"
+            android:singleLine="true"
+            android:textColorHint="@color/lightgrey"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/img_cleare_forgot_mobilenumber"
+            android:layout_width="@dimen/marign20dp"
+            android:layout_height="@dimen/marign20dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:layout_marginEnd="@dimen/marign10dp"
+            android:focusable="false"
+            android:src="@drawable/clear_field"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/txtinput_login_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/marign20dp"
+        android:layout_marginTop="@dimen/marign15dp"
+        android:layout_marginEnd="@dimen/marign20dp"
+        app:hintEnabled="false"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraint_forgot_mobile_number"
+        app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
+        app:passwordToggleEnabled="true">
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/edt_loginpassword"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@drawable/edittext_shadow"
+            android:hint="@string/password"
+            android:inputType="text"
+            android:paddingStart="@dimen/marign15dp"
+            android:paddingTop="@dimen/marign10dp"
+            android:paddingEnd="@dimen/marign10dp"
+            app:hintEnabled="false" />
 
-            <View
-                android:background="@color/darkgrey"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"></View>
-
-            <LinearLayout
-                android:background="@android:color/transparent"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <RelativeLayout
-                    android:id="@+id/relative_cancel"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:id="@+id/tv_cancel"
-                        android:layout_centerInParent="true"
-                        android:textColor="@color/black"
-                        android:text="@string/cancel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"></TextView>
-
-                </RelativeLayout>
-                <View
-
-                    android:background="@color/darkgrey"
-                    android:layout_weight="0"
-                    android:layout_width="1dp"
-                    android:layout_height="@dimen/marign40dp"></View>
-
-                <RelativeLayout
-                    android:gravity="center_vertical"
-                    android:id="@+id/relative_ok"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:id="@+id/tv_ok"
-                        android:layout_centerHorizontal="true"
-                        android:gravity="center"
-                        android:layout_centerInParent="true"
-                        android:layout_gravity="center"
-                        android:textColor="@color/black"
-                        android:text="@string/submit"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"></TextView>
-
-                </RelativeLayout>
-
-            </LinearLayout>
-
-        </LinearLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
 
-    </LinearLayout>
+    <Button
+        android:id="@+id/btn_continue"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/marign20dp"
+        android:layout_marginTop="@dimen/marign20dp"
+        android:layout_marginEnd="@dimen/marign20dp"
+        android:layout_marginBottom="@dimen/marign20dp"
+        android:background="@drawable/button_bg_green"
+        android:fontFamily="@font/lato"
+        android:text="@string/txtcontinue"
+        android:textColor="@color/white"
+        android:textSize="@dimen/marign18sp"
+        app:layout_constraintTop_toBottomOf="@+id/txtinput_login_password" />
 
 
+    <ProgressBar
+        android:visibility="gone"
+        android:id="@+id/pb_login"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
