--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -1,151 +1,146 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/img_welcomebase"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/marign30dp"
-        android:contentDescription="@string/image"
-        android:src="@drawable/spidpay_logo" />
+    <data>
 
+    </data>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginLeft="@dimen/marign20dp"
-        android:layout_marginRight="@dimen/marign20dp"
-        android:layout_marginBottom="@dimen/marign20dp"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tv_loginemail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="@font/lato_bold"
-            android:text="@string/changepassword"
-            android:textColor="@color/purple_200"
-            android:textSize="@dimen/marign25sp" />
+        <ImageView
+            android:id="@+id/img_welcomebase"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/marign30dp"
+            android:contentDescription="@string/image"
+            android:src="@drawable/spidpay_logo" />
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign15dp"
-            android:layout_weight="1"
-            android:background="@drawable/edittext_shadow"
-            android:orientation="horizontal">
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="@dimen/marign20dp"
+            android:layout_marginRight="@dimen/marign20dp"
+            android:layout_marginBottom="@dimen/marign20dp"
+            android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/edt_change_oldpassword"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/marign35dp"
-                android:layout_weight="1"
-                android:background="@android:color/transparent"
-                android:hint="@string/oldpassword"
-                android:inputType="number"
-                android:maxLength="10"
-                android:paddingLeft="@dimen/marign10dp"
-                android:paddingRight="@dimen/marign10dp"
-                android:textColorHint="@color/lightgrey" />
-
-            <ImageView
-                android:id="@+id/img_cleare_oldpassword"
-                android:layout_width="@dimen/marign20dp"
-                android:layout_height="@dimen/marign20dp"
+            <TextView
+                android:id="@+id/tv_loginemail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginRight="@dimen/marign10dp"
-                android:layout_weight="0"
-                android:src="@drawable/ic_baseline_cancel_24"
-                android:visibility="gone" />
+                android:fontFamily="@font/lato_bold"
+                android:text="@string/changepassword"
+                android:textColor="@color/purple_200"
+                android:textSize="@dimen/marign25sp" />
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/old_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marign15dp"
+                android:layout_marginTop="@dimen/marign15dp"
+                android:layout_marginEnd="@dimen/marign15dp"
+                app:hintEnabled="false"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linear_mobile_number"
+                app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
+                app:passwordToggleEnabled="true">
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/edt_old_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/edittext_shadow"
+                    android:hint="@string/oldpassword"
+                    android:inputType="text"
+                    android:paddingStart="@dimen/marign15dp"
+                    android:paddingTop="@dimen/marign10dp"
+                    android:paddingEnd="@dimen/marign10dp"
+                    app:hintEnabled="false" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/new_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marign15dp"
+                android:layout_marginTop="@dimen/marign15dp"
+                android:layout_marginEnd="@dimen/marign15dp"
+                app:hintEnabled="false"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linear_mobile_number"
+                app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
+                app:passwordToggleEnabled="true">
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/edt_new_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/edittext_shadow"
+                    android:hint="@string/newpassword"
+                    android:inputType="text"
+                    android:paddingStart="@dimen/marign15dp"
+                    android:paddingTop="@dimen/marign10dp"
+                    android:paddingEnd="@dimen/marign10dp"
+                    app:hintEnabled="false" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/confirm_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marign15dp"
+                android:layout_marginTop="@dimen/marign15dp"
+                android:layout_marginEnd="@dimen/marign15dp"
+                app:hintEnabled="false"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linear_mobile_number"
+                app:passwordToggleDrawable="@drawable/ic_baseline_remove_red_eye_24"
+                app:passwordToggleEnabled="true">
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/edt_confirm_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/edittext_shadow"
+                    android:hint="@string/confirmpassword"
+                    android:inputType="text"
+                    android:paddingStart="@dimen/marign15dp"
+                    android:paddingTop="@dimen/marign10dp"
+                    android:paddingEnd="@dimen/marign10dp"
+                    app:hintEnabled="false" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <Button
+                android:id="@+id/btn_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/marign15dp"
+                android:layout_marginTop="@dimen/marign20dp"
+                android:layout_marginEnd="@dimen/marign15dp"
+                android:background="@drawable/button_bg_green"
+                android:fontFamily="@font/lato"
+                android:text="@string/submit"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="@dimen/marign18sp" />
+
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign15dp"
-            android:layout_weight="1"
-            android:background="@drawable/edittext_shadow"
-            android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/edt_new_password"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/marign35dp"
-                android:layout_weight="1"
-                android:background="@android:color/transparent"
-                android:hint="@string/newpassword"
-                android:inputType="number"
-                android:maxLength="10"
-                android:paddingLeft="@dimen/marign10dp"
-                android:paddingRight="@dimen/marign10dp"
-                android:textColorHint="@color/lightgrey" />
-
-            <ImageView
-                android:id="@+id/img_cleare_newpassword"
-                android:layout_width="@dimen/marign20dp"
-                android:layout_height="@dimen/marign20dp"
-                android:layout_gravity="center"
-                android:layout_marginRight="@dimen/marign10dp"
-                android:layout_weight="0"
-                android:src="@drawable/ic_baseline_cancel_24"
-                android:visibility="gone" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/marign15dp"
-            android:layout_weight="1"
-            android:background="@drawable/edittext_shadow"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/edt_confirm_password"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/marign35dp"
-                android:layout_weight="1"
-                android:background="@android:color/transparent"
-                android:hint="@string/password"
-                android:inputType="number"
-                android:maxLength="10"
-                android:paddingLeft="@dimen/marign10dp"
-                android:paddingRight="@dimen/marign10dp"
-                android:textColorHint="@color/lightgrey" />
-
-            <ImageView
-                android:id="@+id/img_cleare_confirmpassword"
-                android:layout_width="@dimen/marign20dp"
-                android:layout_height="@dimen/marign20dp"
-                android:layout_gravity="center"
-                android:layout_marginRight="@dimen/marign10dp"
-                android:layout_weight="0"
-                android:src="@drawable/ic_baseline_cancel_24"
-                android:visibility="gone" />
-        </LinearLayout>
-
-
-        <Button
-            android:id="@+id/btn_login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/marign10dp"
-            android:layout_marginTop="@dimen/marign20dp"
-            android:layout_marginRight="@dimen/marign10dp"
-            android:background="@drawable/button_bg_green"
-            android:fontFamily="@font/lato"
-            android:text="@string/submit"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="@dimen/marign18sp" />
-
-    </LinearLayout>
-
-
-</RelativeLayout>
+    </RelativeLayout>
+</layout>
