--- a/app/src/main/res/layout/activity_verify_o_t_p.xml
+++ b/app/src/main/res/layout/activity_verify_o_t_p.xml
@@ -4,6 +4,9 @@
 
     <data>
 
+        <variable
+            name="verify_otp"
+            type="com.example.spidpay.ui.verifyotp.VerifyOTPViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -71,7 +74,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:hint="@string/mobileno"
+                android:hint="@string/otp"
+                android:text="@={verify_otp.OTP}"
                 android:inputType="number"
                 android:maxLength="10"
                 android:paddingStart="@dimen/marign5dp"
@@ -109,6 +113,7 @@
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="@dimen/marign18sp"
+            android:onClick="@{(v)->verify_otp.validateOTPFiled(v)}"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/constraint_verify_otp" />
@@ -146,6 +151,16 @@
             android:textSize="@dimen/marign18sp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_verify_otp" />
+
+        <ProgressBar
+            android:id="@+id/pb_verify_otp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
